--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
 
   sql-data:
-    image: sqldata
+    image: hushvi/sqldata
     environment:
      ACCEPT_EULA: "Y"
      SA_PASSWORD: "Pa$$w0rd16"
